fix (design): add no-wrapping for highlights

--- a/includes/style/cv.pcss
+++ b/includes/style/cv.pcss
@@ -116,6 +116,7 @@
 
 /* HIGHLIGHTS */
 .cv-highlights {
+    white-space: nowrap;
     color: var(--text-color);
     position: relative;
 
